# sat-interface

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: build.yaml
src/: cadical.rs  lib.rs  multisolver.rs
