[package]
name = "sat-interface"
edition = "2024"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"
description = "This crate provides an abstraction interface for SAT solvers."
authors = ["the Amazon Trusted Solver team"]
keywords = ["SAT", "solver", "logic"]
categories = ["algorithms", "science"]
repository = "https://github.com/yaspar-org/sat-interface"

[features]
default = []
cadical = ["dep:cadical-sys"]

[dependencies]
cadical-sys = { version = "0.7.0", optional = true }
