[package]
name = "sat-interface"
edition = "2024"
version = "0.1.1"
readme = "README.md"
license = "Apache-2.0"
description = "This crate provides an abstraction interface for SAT solvers."
authors = ["the Amazon Trusted Solver team"]
keywords = ["SAT", "solver", "logic"]
categories = ["algorithms", "science"]
homepage = "https://github.com/yaspar-org/sat-interface"
repository = "https://github.com/yaspar-org/sat-interface"

[features]
default = []
cadical = ["dep:cadical-sys"]

[dependencies]
cadical-sys = { version = "0.7.0", optional = true }

[lib]
name = "sat_interface"
path = "src/lib.rs"
crate-type = ["lib"]
